[vfs] switching `LocalFileSystem#setWritable` to NIO (IJPL-2338; IJPL-5292)
GitOrigin-RevId: f5eb341bca20c1e5cbdafdee4019a73fc613495e